# Harrier

./: .gitignore  README.md  forge-project.json  pyproject.toml  torvalds.txt
docs/: ss04-spike-evidence.md
docs/specs/: harrier-osint-mcp.md
docs/specs/harrier-osint-mcp/: index.md  redteam-report.md  sub-spec-1-scaffold.md  sub-spec-2-candidates.md  sub-spec-3-adapters.md  sub-spec-4-people-search.md  sub-spec-5-sweep.md  sub-spec-6-skill-integration.md
src/harrier/: __init__.py  assist.py  candidates.py  correlate.py  distinct.py  graph.py  investigate.py  runner.py  schema.py  server.py  sweep.py  tradecraft.py  verify.py
src/harrier/adapters/: __init__.py  court.py  domain.py  email.py  genealogy.py  people_search.py  phone.py  username.py
tests/: test_adapters.py  test_assist.py  test_candidates.py  test_court_genealogy.py  test_distinct.py  test_graph.py  test_investigate.py  test_people_search.py  test_runner.py  test_schema.py  test_sweep.py  test_tradecraft.py  test_username_timeout_fix.py  test_verify.py
